# python_template

./: .gitignore  LICENSE  README.md  cookiecutter.json  pyproject.toml  tox.ini
.github/workflows/: labeler.yaml  push.yaml  release-drafter.yaml  release.yaml
base/hooks/: post_gen_project.py  pre_gen_project.py
base/{{cookiecutter.project_name}}/: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
base/{{cookiecutter.project_name}}/docs/: conf.py
cli/: cookiecutter.json
cli/{{cookiecutter.project_name}}/: .flake8  .gitattributes  .gitignore  gitchangelog.rc  poetry.toml  pyproject.toml  tests  tox.ini
cli/{{cookiecutter.project_name}}/.github/workflows/: push.yaml
docker/: cookiecutter.json  hooks
docker/{{cookiecutter.project_name}}/: .dockerignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  docker-entrypoint.sh  docs  pyproject.toml
hooks/: post_gen_project.py
tests/: test_python_templates.py
tests/resources/: cli_config.yaml  docker_config.yaml  library_config.yaml
{{cookiecutter.project_name}}/: .flake8  .gitignore  README.md  README.rst  gitchangelog.rc  mypy.ini  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/docs/: index.rst  reference.rst
{{cookiecutter.project_name}}/{{ cookiecutter.package_name }}/: {%if  cookiecutter.is_cli -%}main.py{%- endif %}.py
