[tool.poetry]
name = "python_template"
version = "0.5.0"
description = "Just another opinionated cookiecutter template to stop writing Python boilerplate."
authors = ["José Antonio Zumaquero Tores <jazumaquer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
cookiecutter = "^1.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
